fix contrast

--- a/styles.css
+++ b/styles.css
@@ -401,7 +401,7 @@ body {
 .contact-container input[type="submit"],
 .contact-container input[type="reset"] {
     background-color: rgb(7, 122, 153);
-    color: white;
+    color: black;
     padding: 12px 20px;
     border: none;
     cursor: pointer;
